<resources>
    <string name="app_name">proyecto_pets</string>
    <string name="login">LogIn</string>
    <string name="pets_app">Pets App</string>
    <string name="singin">Crear cuenta</string>
    <string name="Google">Google</string>
    <string name="prefs_file">filekey</string>
    <string name="Facebook">Facebook</string>
    <string name="tvFromTitle">Registrate</string>
    <string name="Nombres">Nombres</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Dni">DNI</string>
    <string name="Correo">Email</string>
    <string name="Password">Password</string>
    <string name="volver">Volver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Crear">Ingresar</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="miMascota">Mi Mascota</string>
    <string name="miCuenta">Mi Cuenta</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
</resources>