<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pets_app"
        android:textSize="@dimen/txt_login_size"
        android:layout_marginTop="@dimen/txt_login_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cImgGato"
        android:layout_width="180dp"
        android:layout_height="190dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/gato_login"
        app:civ_border_color="@color/splash_pet"
        app:civ_border_width="0.5dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="15sp"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/splash_pet"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/cImgGato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
    android:id="@+id/btnGoogle"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:layout_marginTop="25dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:text="@string/Google"
    android:textAlignment="center"
    android:textColor="@color/black"
    android:textSize="15sp"
    android:drawableLeft="@drawable/google"
    style="?attr/materialButtonOutlinedStyle"
    app:strokeColor="@color/black"
    app:cornerRadius="20dp"
    app:layout_constraintTop_toBottomOf="@id/btnLogin"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/btnFacebook"

    />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/Facebook"
        android:textAlignment="center"
        android:textColor="@color/btn_facebook"
        android:textSize="15sp"
        android:drawableLeft="@drawable/facebook"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/btn_facebook"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCrearUser"

        />

    <Button
        android:id="@+id/btnCrearUser"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/singin"
        android:textColor="@color/black"
        android:textSize="15sp"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/splash_pet"
        app:cornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>