<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FormActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/tvRegistrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvFromTitle"
            android:textSize="@dimen/form_title_size"
            android:textColor="@color/black"
            android:layout_marginTop="35dp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiLayout_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/tvRegistrate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nombres"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiLayout_Apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/tiLayout_nombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Apellidos"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiLayout_Dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/tiLayout_Apellidos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Dni"
                android:inputType="number"
                android:maxLength="8"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiLayout_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/tiLayout_Dni"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiLayout_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/tiLayout_Email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/tiLayout_Password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/volver"
                android:textColor="@color/black"
                app:strokeColor="@color/splash_pet"
                app:cornerRadius="20dp"
                />
            <Button
                android:id="@+id/btnCrear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Crear"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_size"
                app:cornerRadius="20dp"
                android:backgroundTint="@color/splash_pet"
                app:strokeColor="@color/splash_pet"
                />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

