<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_login_Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pets_app"
        android:textSize="@dimen/txt_login_size"
        android:layout_marginTop="@dimen/txt_login_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login_Titulo"
        app:layout_constraintEnd_toStartOf="@id/tv_login_Titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cImgLogin"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/friend_login"
        app:layout_constraintTop_toBottomOf="@id/tv_login_Titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLayout_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/cImgLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Usuario"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLayout_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tiLayout_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Contraseña"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btnCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/splash_pet"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:text="@string/Crear"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiLayout_contraseña"
        app:strokeColor="@color/splash_pet"
        />

</androidx.constraintlayout.widget.ConstraintLayout>