<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.MenuFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cImgPerfil"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="60dp"
        tools:src="@color/splash_pet"
        android:layout_marginRight="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tvNomUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Nombre de Perfil"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/cImgPerfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginRight="45dp"
        />
    <TextView
        android:id="@+id/tvEmailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Correo de usuario"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvNomUser"
        app:layout_constraintStart_toStartOf="@id/tvNomUser"
        app:layout_constraintEnd_toEndOf="@id/tvNomUser"
        />

    <TextView
        android:id="@+id/tvEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Editar"
        android:textColor="@color/splash_pet"
        android:textSize="16sp"
        android:layout_marginTop="190dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvEmailUser"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/profileDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/cImgPerfil"
        />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/miCuenta"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/profileDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLayout_edit_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nombres"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:enabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLayout_edit_Apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tiLayout_edit_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Apellidos"
            android:maxLines="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:enabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLayout_edit_Dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tiLayout_edit_Apellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Dni"
            android:maxLines="1"
            android:inputType="number"
            android:maxLength="8"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:enabled="false"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLayout_edit_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tiLayout_edit_Dni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"



        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Correo"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:enabled="false"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLayout_edit_Password"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tiLayout_edit_Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:enabled="false"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Modificar"
        android:textColor="@color/splash_pet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiLayout_edit_Password"
        app:layout_constraintBottom_toTopOf="@id/btnEliminar"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/splash_pet"
        />
    <Button
        android:id="@+id/btnEliminar"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="50dp"
        android:drawableLeft="@drawable/ic_outline_delete_24"
        android:text="Eliminar Cuenta"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnModificar"
        app:strokeColor="@color/red" />
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>